Array template updated. Fixed print operator and added assignment operator.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.25.2)
 project(Neo)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -6,16 +6,16 @@ set(CMAKE_CXX_STANDARD 20)
 #Set your directories.  The dot representes the root application folder.
 #Thus my the path to my domain folder:
 set(src ./src)
-set(inc ./inc)
+set(include ./include)
 
 #Include the directories and now your cpp files will recognize your headers
 include_directories(${src})
-include_directories(${inc})
+include_directories(${include})
 
 
 add_executable(Neo main.cpp
-        inc/neo.hpp
-        inc/array.hpp
-        inc/operations.hpp
+        include/neo.hpp
+        include/array.hpp
+        include/operations.hpp
         src/operations.cpp
 )
