this change is broken, just incase i need to revert. THis change is ndarray trying to iteratively create ndarrays within it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,7 @@ add_executable(Neo main.cpp
         include/array.hpp
         include/operations.hpp
         src/operations.cpp
+        include/ndarray.hpp
+        include/structs.hpp
+        src/structs_ostream.cpp
 )
