Finished get function of tensor. Added loc_interval(), which returns the starting and ending index of the interval given the input arguments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,4 @@ add_executable(Neo main.cpp
         include/ndarray.hpp
         include/structs.hpp
         src/structs_ostream.cpp
-)
+        include/tensor.hpp)
